--- a/.github/workflows/serialization-tests.yml
+++ b/.github/workflows/serialization-tests.yml
@@ -20,11 +20,10 @@ jobs:
           submodules: true
           ref: ${{ inputs.compiler-ref }}
       - name: Install Protobuf Ubuntu
-        run: sudo apt-get update && sudo apt-get install libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
+        run: sudo apt-get update && sudo apt-get install -y libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
         if: ${{ runner.os == 'Linux' }}
       - name: Run serialization tests;
         run: |
-          source /opt/ros/galactic/setup.bash
           ./gradlew test --tests org.lflang.tests.serialization.SerializationTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
