Added back source for ROS

--- a/.github/workflows/serialization-tests.yml
+++ b/.github/workflows/serialization-tests.yml
@@ -24,6 +24,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
       - name: Run serialization tests;
         run: |
+          source /opt/ros/*/setup.bash
           ./gradlew test --tests org.lflang.tests.serialization.SerializationTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
