--- a/.github/workflows/serialization-tests.yml
+++ b/.github/workflows/serialization-tests.yml
@@ -22,9 +22,11 @@ jobs:
       - name: Install Protobuf Ubuntu
         run: sudo apt-get update && sudo apt-get install -y libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
         if: ${{ runner.os == 'Linux' }}
+      - name: Install rclcpp
+        run: sudo apt-get update && sudo apt-get install -y ros-$ROS_DISTRO-rclcpp
       - name: Run serialization tests;
         run: |
-          source /opt/ros/*/setup.bash
+          source "/opt/ros/$ROS_DISTRO/setup.bash"
           ./gradlew test --tests org.lflang.tests.serialization.SerializationTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
