--- a/.github/workflows/serialization-tests.yml
+++ b/.github/workflows/serialization-tests.yml
@@ -26,7 +26,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y ros-$ROS_DISTRO-rclcpp
       - name: Run serialization tests;
         run: |
-          source "/opt/ros/$ROS_DISTRO/setup.bash"
+          source /opt/ros/$ROS_DISTRO/setup.bash
           ./gradlew test --tests org.lflang.tests.serialization.SerializationTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
