--- a/.github/workflows/serialization-tests.yml
+++ b/.github/workflows/serialization-tests.yml
@@ -26,7 +26,7 @@ jobs:
         if: ${{ runner.os == 'Linux' }}
       - name: Run serialization tests;
         run: |
-          echo "/ros_entrypoint.sh" &> ~/.bashrc
+          echo "/ros_entrypoint.sh" >> ~/.bashrc
           ./gradlew test --tests org.lflang.tests.serialization.SerializationTest.*
       - name: Report to CodeCov
         uses: codecov/codecov-action@v2.1.0
