--- a/.github/workflows/serialization-tests.yml
+++ b/.github/workflows/serialization-tests.yml
@@ -4,25 +4,24 @@ on:
   workflow_call:
 
 jobs:
-  run:
+  build:
     runs-on: ubuntu-latest
-    container: ros:latest
+    container: 
+      image: ros:latest
     steps:
       - name: Setup Java JDK
         uses: actions/setup-java@v1.4.3
         with:
           java-version: 11
-      - name: Check out lingual-franca repository
+      - name: Check out lingua-franca repository
         uses: actions/checkout@v2
         with:
           repository: lf-lang/lingua-franca
           submodules: true
-          ref: ${{ inputs.compiler-ref }}
       - name: Install Protobuf Ubuntu
         run: |
           sudo apt-get update
           sudo apt-get install -y libprotobuf-c-dev protobuf-c-compiler protobuf-compiler libprotobuf-dev
-        if: ${{ runner.os == 'Linux' }}
       - name: Run serialization tests;
         run: ./gradlew test --tests org.lflang.tests.serialization.SerializationTest.*
       - name: Report to CodeCov
