--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ on:
     secrets:
       envPAT:
         required: false
+  workflow_dispatch:
 
 jobs:
   run:
@@ -39,9 +40,12 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
       - name: Build and package lfc
         run: .github/scripts/package_lfc.sh
-      - name: Build and package epoch
+      - name: Build and package epoch (default)
         run: mvn package
-
+        if: ${{ env.GITHUB_EVENT_NAME != 'workflow_dispatch' }}
+      - name: Build and package epoch (force check updates)
+        run: mvn package
+        if: ${{ env.GITHUB_EVENT_NAME == 'workflow_dispatch' }}
       - name: Deploy nightly release
         uses: marvinpinto/action-automatic-releases@latest
         with:
