--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,10 +42,10 @@ jobs:
         run: .github/scripts/package_lfc.sh
       - name: Build and package epoch (default)
         run: mvn package
-        if: ${{ env.GITHUB_EVENT_NAME != 'workflow_dispatch' }}
+        if: ${{ github.event.action != 'workflow_dispatch' }}
       - name: Build and package epoch (force check updates)
         run: mvn -U package
-        if: ${{ env.GITHUB_EVENT_NAME == 'workflow_dispatch' }}
+        if: ${{ github.event.action == 'workflow_dispatch' }}
       - name: Deploy nightly release
         uses: marvinpinto/action-automatic-releases@latest
         with:
