First build without -S and use -S if unsuccessful

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,12 +40,8 @@ jobs:
         uses: gradle/wrapper-validation-action@v1
       - name: Build and package lfc
         run: .github/scripts/package_lfc.sh
-      - name: Build and package epoch (default)
-        run: mvn package
-        if: ${{ github.event_name != 'workflow_dispatch' }}
-      - name: Build and package epoch (force check updates)
-        run: mvn -U package
-        if: ${{ github.event_name == 'workflow_dispatch' }}
+      - name: Build and package epoch
+        run: mvn package || mvn -S package
       - name: Deploy nightly release
         uses: marvinpinto/action-automatic-releases@latest
         with:
