--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Build and package lfc
         run: .github/scripts/package_lfc.sh
       - name: Build and package epoch (default)
-        run: mvn package
+        run: mvn package || mvn -U package
         if: ${{ env.GITHUB_EVENT_NAME != 'workflow_dispatch' }}
       - name: Build and package epoch (force check updates)
         run: mvn -U package
