--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -105,6 +105,6 @@ jobs:
 
   # Run the serialization tests
   serialization-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@ros2-ccpp-tests
+    uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@master
     needs: cancel
     
