diagrams: Added support for code association of imported reactors. #889
Alt+Click on a diagram element will now jump to the associated code
section even if it is located in a different editor.
This implementation only affects the Epoch IDE.

--- a/org.lflang.ui/plugin.xml
+++ b/org.lflang.ui/plugin.xml
@@ -661,4 +661,17 @@
          </toolbar>
       </menuContribution>
  </extension>
+ <extension
+       point="de.cau.cs.kieler.klighd.ui.view.controller">
+    <controller
+          class="org.lflang.ui.diagram.LinguaFrancaDiagramUpdateController">
+    </controller>
+ </extension>
+ <extension
+       point="de.cau.cs.kieler.klighd.ui.view.editor">
+    <editor
+          controllerID="org.lflang.ui.diagram.LinguaFrancaDiagramUpdateController"
+          editorID="org.lflang.LF">
+    </editor>
+ </extension>
 </plugin>
