--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
   
   # Run the Python integration tests.
   py-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@python-build-update
+    uses: lf-lang/lingua-franca/.github/workflows/py-tests.yml@master
     needs: cancel
     
   # Run the Rust integration tests.
@@ -105,6 +105,5 @@ jobs:
 
   # Run the serialization tests
   serialization-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@python-build-update
+    uses: lf-lang/lingua-franca/.github/workflows/serialization-tests.yml@master
     needs: cancel
-    
