Get some debug info

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,9 @@ jobs:
         run: .github/scripts/package_lfc.sh
         shell: bash
       - name: Build and package epoch
-        run: mvn package || mvn -U package
+        run: |
+          mvn -version
+          mvn package || mvn -U package
         shell: bash
       - name: Deploy nightly release
         uses: marvinpinto/action-automatic-releases@latest
