--- a/.github/workflows/ts-tests.yml
+++ b/.github/workflows/ts-tests.yml
@@ -17,10 +17,14 @@ jobs:
         platform: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.platform }}
     steps:
-      - name: Setup Java JDK
-        uses: actions/setup-java@v1.4.3
+      - name: Prepare build environment
+        uses: ./.github/actions/prepare-build-env
+      - name: Check out lingua-franca repository
+        uses: actions/checkout@v3
         with:
-          java-version: 11
+          repository: lf-lang/lingua-franca
+          submodules: true
+          ref: ${{ inputs.compiler-ref }}
       - name: Setup Node.js environment
         uses: actions/setup-node@v2.1.2
       - name: Install pnpm
@@ -34,12 +38,6 @@ jobs:
         run: |
           brew install coreutils
         if: ${{ runner.os == 'macOS' }}
-      - name: Check out lingua-franca repository
-        uses: actions/checkout@v2
-        with:
-          repository: lf-lang/lingua-franca
-          submodules: true
-          ref: ${{ inputs.compiler-ref }}
       - name: Check out specific ref of reactor-ts
         uses: actions/checkout@v2
         with:
