--- a/.github/actions/prepare-build-env/action.yml
+++ b/.github/actions/prepare-build-env/action.yml
@@ -8,10 +8,10 @@ runs:
       with:
         java-version: 17
         distribution: zulu
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v4.3
-      with:
-        maven-version: 3.8.2
+    # - name: Set up Maven
+    #   uses: stCarolas/setup-maven@v4.3
+    #   with:
+    #     maven-version: 3.8.2
     - name: Cache local Maven repository
       uses: actions/cache@v3.0.2
       with:
