Revert "Remove action used to install a particular version of Java that keeps failing sporadically"
This reverts commit 3d2c29854ac5cc007cc826158249bb776aa16c5f.

--- a/.github/actions/prepare-build-env/action.yml
+++ b/.github/actions/prepare-build-env/action.yml
@@ -3,5 +3,10 @@ description: Set up Java, Maven, Gradle, etc.
 runs:
   using: "composite"
   steps: 
+    - name: Set up Java JDK
+      uses: actions/setup-java@v3.3.0
+      with:
+        java-version: 17
+        distribution: zulu      
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1.0.4
