--- a/.github/actions/prepare-build-env/action.yml
+++ b/.github/actions/prepare-build-env/action.yml
@@ -13,7 +13,7 @@ runs:
         export JAVA_HOME=$JAVA_HOME_17_X64
         echo $JAVA_HOME
         echo $(which java)
-        echo ${which mvn}
+        echo $(which mvn)
         echo "org.gradle.java.home=$JAVA_HOME" >> gradle.properties
         cat gradle.properties
       shell: bash
