[CI] Unix-style path separators.

--- a/.github/actions/prepare-build-env/action.yml
+++ b/.github/actions/prepare-build-env/action.yml
@@ -14,7 +14,7 @@ runs:
         echo $JAVA_HOME
         echo $(which java)
         echo $(which mvn)
-        echo "org.gradle.java.home=$JAVA_HOME" >> gradle.properties
+        echo "org.gradle.java.home=${JAVA_HOME//\\/\/}" >> gradle.properties
         cat gradle.properties
       shell: bash
     - name: Validate Gradle wrapper
