--- a/.github/actions/prepare-build-env/action.yml
+++ b/.github/actions/prepare-build-env/action.yml
@@ -1,21 +1,11 @@
 name: Prepare build environment (Linux only)
 description: Set up Java, Maven, Gradle, etc.
-env:
-  JAVA_HOME: /usr/lib/jvm/temurin-17-jdk-amd64
 runs:
   using: "composite"
   steps:
-    - name: Set up Maven
-      uses: stCarolas/setup-maven@v4.3
-    - run: |
-        echo $(java -version)
-        echo $(which java)
-        export JAVA_HOME=$JAVA_HOME_17_X64
-        echo $JAVA_HOME
-        echo $(which java)
-        echo $(which mvn)
-        echo "org.gradle.java.home=${JAVA_HOME//\\/\/}" >> gradle.properties
-        cat gradle.properties
-      shell: bash
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin'
+        java-version: '17'
     - name: Validate Gradle wrapper
       uses: gradle/wrapper-validation-action@v1.0.4
