--- a/.github/actions/prepare-build-env/action.yml
+++ b/.github/actions/prepare-build-env/action.yml
@@ -8,6 +8,7 @@ runs:
     - name: Set up Maven
       uses: stCarolas/setup-maven@v4.3
     - run: |
+        echo "$JAVA_HOME_17_X64/bin" >> $GITHUB_PATH
         echo $(java -version)
         echo $(which java)
         export JAVA_HOME=$JAVA_HOME_17_X64
