Re-add tests to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,7 @@
                 <module>org.lflang.ui</module>
                 <module>org.lflang.diagram</module>
                 <!-- Tests -->
+                <module>org.lflang.tests</module>
                 <module>org.lflang.ui.tests</module>
                 <!-- Eclipse Product -->
                 <module>org.lflang.sdk</module>
