--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,12 +32,12 @@ jobs:
   
   # Run tests for the standalone compiler.
   cli-tests:
-    uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@java-ci
+    uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@master
     needs: cancel
 
   # Run the C benchmark tests. 
   c-benchmark-tests:
-    uses: lf-lang/benchmarks-lingua-franca/.github/workflows/benchmark-tests.yml@java-ci
+    uses: lf-lang/benchmarks-lingua-franca/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'C'
     needs: cancel
@@ -66,7 +66,7 @@ jobs:
   
   # Run the C++ benchmark tests.
   cpp-benchmark-tests:
-    uses: lf-lang/benchmarks-lingua-franca/.github/workflows/benchmark-tests.yml@java-ci
+    uses: lf-lang/benchmarks-lingua-franca/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'Cpp'
     needs: cancel
@@ -93,7 +93,7 @@ jobs:
 
   # Run the Rust benchmark tests.
   rs-benchmark-tests:
-    uses: lf-lang/benchmarks-lingua-franca/.github/workflows/benchmark-tests.yml@java-ci
+    uses: lf-lang/benchmarks-lingua-franca/.github/workflows/benchmark-tests.yml@master
     with:
       target: 'Rust'
     needs: cancel
