--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
     needs: cancel
   
   # Run tests for the standalone compiler.
-  # TODO: Change this back to master branch once merged.
+  # TODO: Change this back to master branch once merged!
   cli-tests:
     uses: lf-lang/lingua-franca/.github/workflows/cli-tests.yml@lfc-to-cli
     needs: cancel
