Removed support outside MacOS for moment.

--- a/.github/workflows/c-tests.yml
+++ b/.github/workflows/c-tests.yml
@@ -32,12 +32,6 @@ jobs:
           ref: ${{ inputs.compiler-ref }}
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
-      - name: Install Arduino CLI
-        uses: arduino/setup-arduino-cli@v1
-      - name: Install Arduino Platform
-        run: |
-          arduino-cli core update-index
-          arduino-cli core install arduino:avr
       - name: Check out specific ref of reactor-c
         uses: actions/checkout@v3
         with:
@@ -52,6 +46,14 @@ jobs:
       - name: Install RTI
         uses: ./.github/actions/install-rti
         if: ${{ runner.os == 'macOS' || runner.os == 'Linux' }}
+      - name: Install Arduino CLI
+        uses: arduino/setup-arduino-cli@v1
+        if: ${{ runner.os == 'macOS' }}
+      - name: Install Arduino Platform
+        run: |
+          arduino-cli core update-index
+          arduino-cli core install arduino:avr
+        if: ${{ runner.os == 'macOS' }}
       - name: Build RTI docker image
         uses: ./.github/actions/build-rti-docker
         if: ${{ runner.os == 'Linux' }}
