CI: Delete rustup cache in case of any failures
This works around https://github.com/ATiltedTree/setup-rust/issues/157
and https://github.com/rust-lang/rustup/issues/2417

--- a/.github/workflows/rs-tests.yml
+++ b/.github/workflows/rs-tests.yml
@@ -27,6 +27,17 @@ jobs:
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
       - name: Setup Rust
+        id: rustup
+        uses: ATiltedTree/setup-rust@v1
+        with:
+          rust-version: ${{ matrix.rust }}
+          components: clippy
+        continue-on-error: true
+      - name: Delete rustup cache
+        run: rm -rf ~/.rustup
+        if: ${{ steps.rustup.outcome }} != "success"
+      - name: Setup Rust (again)
+        if: ${{ steps.rustup.outcome }} != "success"
         uses: ATiltedTree/setup-rust@v1
         with:
           rust-version: ${{ matrix.rust }}
