--- a/.github/workflows/py-tests.yml
+++ b/.github/workflows/py-tests.yml
@@ -26,6 +26,7 @@ jobs:
           repository: lf-lang/lingua-franca
           submodules: true
           ref: ${{ inputs.compiler-ref }}
+          fetch-depth: 0
       - name: Prepare build environment
         uses: ./.github/actions/prepare-build-env
       - name: Setup Python
